--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <a href="https://www.linkedin.com/in/weberson-rodrigues/" target="blank" class="btn btn-primary">Linkedin</a>
                 </div>
             </div>
-            <a class="btn btn-primary leia" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Ler mais</a>
+            <a class="btn btn-primary leia btn-ler-mais1" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Ler mais</a>
             
           </div>
         </div>
@@ -101,7 +101,7 @@
                 <a href="https://www.linkedin.com/in/robersonferreira/" target="blank" class="btn btn-primary">Linkedin</a>
                 </div>
             </div>
-            <a class="btn btn-primary leia" data-toggle="collapse" href="#multiCollapseExample2" role="button" aria-expanded="false" aria-controls="multiCollapseExample2">Ler mais</a>
+            <a class="btn btn-primary leia btn-ler-mais2" data-toggle="collapse" href="#multiCollapseExample2" role="button" aria-expanded="false" aria-controls="multiCollapseExample2">Ler mais</a>
            
           </div>
         </div>
@@ -118,7 +118,7 @@
                 <a href="#" class="btn btn-primary disabled">Linkedin</a>
                 </div>
             </div>
-            <a class="btn btn-primary leia" data-toggle="collapse" href="#multiCollapseExample3" role="button" aria-expanded="false" aria-controls="multiCollapseExample3">Ler mais</a>
+            <a class="btn btn-primary leia btn-ler-mais3" data-toggle="collapse" href="#multiCollapseExample3" role="button" aria-expanded="false" aria-controls="multiCollapseExample3">Ler mais</a>
           </div>
         </div>
       </div>
@@ -136,7 +136,7 @@
               <a href="https://www.linkedin.com/in/marcelo-assis-01889aa/" target="blank" class="btn btn-primary">Linkedin</a>
               </div>
               </div>
-            <a class="btn btn-primary leia" data-toggle="collapse" href="#multiCollapseExample4" role="button" aria-expanded="false" aria-controls="multiCollapseExample4">Ler mais</a>
+            <a class="btn btn-primary leia btn-ler-mais4" data-toggle="collapse" href="#multiCollapseExample4" role="button" aria-expanded="false" aria-controls="multiCollapseExample4">Ler mais</a>
           </div>
         </div>
       </div>
@@ -152,6 +152,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/31a2144e07.js" crossorigin="anonymous"></script>
   <script src="./js/base.js"></script>
+  <script src="./js/change.js"></script>
 </body>
 
 </html>
