--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="row">
       <div class="col-sm-3">
         <div class="card" id="card">
-          <img class="card-img-top" src="https://avatars2.githubusercontent.com/u/23528917?s=400&u=4b16c5ca5f3cf2fc600bda8054b0c5262fcf9647&v=4" alt="Card image">
+          <img class="card-img-top" src="./img/weberson.JPG" alt="Card image">
           <div class="card-body">
             <h5 class="card-title">Weberson Rodrigues</h5>
             <div class="collapse multi-collapse" id="multiCollapseExample1">
