Adding final changes in Js code

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="row">
       <div class="col-sm-3">
         <div class="card" id="card">
-          <img class="card-img-top" src="./img/Weberson.png" alt="Card image">
+          <img class="card-img-top" src="./img/Weberson.JPG" alt="Card image">
           <div class="card-body">
             <h5 class="card-title">Weberson Rodrigues</h5>
             <div class="collapse multi-collapse" id="multiCollapseExample1">
@@ -91,7 +91,7 @@
       </div>
       <div class="col-sm-3">
         <div class="card" id="card">
-          <img class="card-img-top" src="./img/Roberson.png" alt="Card image">
+          <img class="card-img-top" src="./img/Roberson.JPG" alt="Card image">
           <div class="card-body">
             <h5 class="card-title">Roberson Ferreira</h5>
               <div class="collapse multi-collapse" id="multiCollapseExample2">
@@ -124,7 +124,7 @@
       </div>
       <div class="col-sm-3">
         <div class="card" id="card">
-          <img class="card-img-top" src="./img/Marcelo.png" alt="Card image">
+          <img class="card-img-top" src="./img/Marcelo.JPG" alt="Card image">
           <div class="card-body">
             <h5 class="card-title">Marcelo Assis</h5>
             <div class="collapse multi-collapse" id="multiCollapseExample4">
@@ -152,7 +152,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/31a2144e07.js" crossorigin="anonymous"></script>
   <script src="./js/base.js"></script>
-  <script src="./js/change.js"></script>
+  <script src="./js/change-index.js"></script>
 </body>
 
 </html>
